# rust_workspace

./: .env  .gitignore  AGENTS.md  Cargo.toml
http/: Cargo.toml
http/src/: http_request.rs  http_response.rs
http_server/: Cargo.toml
http_server/public/: 404.html  health.html  index.html
http_server/src/: handler.rs  main.rs  router.rs  server.rs
mini_grep/: Cargo.toml
mini_grep/src/: lib.rs  main.rs
rust_async/: Cargo.toml
rust_async/src/: lib.rs  main.rs  studt_future.rs
rust_elasticsearch/: Cargo.toml
rust_elasticsearch/resource/: elasticsearch.md
rust_game/: Cargo.toml
rust_game/src/: main.rs
rust_server/: Cargo.toml
rust_server/src/: main.rs
rust_web/: Cargo.toml
rust_web/src/: db.rs  main.rs
tcp_client/: Cargo.toml
tcp_client/src/: main.rs
tcp_server/: Cargo.toml
tcp_server/src/: main.rs
web_app/: Cargo.toml
web_app/src/: errors.rs  handlers.rs  main.rs  models.rs  routers.rs
web_app/static/: register.html  teachers.html
web_service/: Cargo.toml
web_service/src/: db_access.rs  error.rs  handlers.rs  main.rs  models.rs  routers.rs  state.rs
web_service/src/db_access/: course.rs  teacher.rs
web_service/src/handlers/: course.rs  general.rs  mod.rs  teacher.rs
web_service/src/models/: course.rs  teacher.rs
