[package]
name = "rust_elasticsearch"
version = "0.1.0"
edition = "2024"

[dependencies]
#elasticsearch = "9.1.0-alpha.1"
elasticsearch = "=7.17.7-alpha.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }