[package]
name = "rust_web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-rt = "2.11.0"
actix-web="4.13.0"
chrono = "0.4.44"
dotenv = "0.15.0"
env_logger = "0.11.10"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
sqlx ={ version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono"] }
tokio = { version = "1.50.0",features = ["full"] }
db = "0.0.0-alpha.101"

