[package]
name = "web_service"
version = "0.1.0"
edition = "2024"
default-run = "teacher-service"

[dependencies]
actix-rt = "2.11.0"
actix-web = "4.12.1"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"
openssl = { version = "0.10.75", features = ["vendored"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros", "chrono"] }



[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "teacher-service"
path = "src/bin/teacher-service.rs"
